--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=libro
+
+spring.datasource.url=jdbc:postgresql://${ALURA_HOST}/alura_libro
+spring.datasource.username=${ALURA_USER}
+spring.datasource.password=${ALURA_PASSWORD}
+spring.datasource.drive-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
